add currently installed package versions

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-flask
-opencv-python
-numpy
-ruckig
-scipy
-flask-socketio
-flask-cors
-matplotlib
-python-osc
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-SocketIO==5.5.1
+opencv-python==4.10.0.84
+pillow==11.1.0
+numpy==2.2.1
+ruckig==0.14.0
+scipy==1.15.1
+matplotlib==3.10.0
+simple-websocket==1.1.0
+python-osc==1.9.3
+python-socketio==5.12.1
